<resources>
    <string name="app_name">CryptoWallet</string>
    <string name="on_boarding_greeting">Welcome to\n.Crypto</string>
    <string name="on_boarding_additional">Your Best Crypto Wallet Partner!</string>
    <string name="on_boarding_button">Start Now</string>
    <string name="log_in_main">Log in\nto continue</string>
    <string name="sign_in_main">Sign up\nto continue</string>
    <string name="hint_for_email">Enter email</string>
    <string name="hint_for_password">Enter password</string>
    <string name="hint_for_confirm_password">Confirm password</string>
    <string name="hint_for_first_name">Enter first name</string>
    <string name="hint_for_last_name">Enter last name</string>
    <string name="log_in_button">Log In</string>
    <string name="forget_password">Forget Password</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="new_user">New User?</string>
    <string name="create_account">Create account</string>
    <string name="have_account">Have account?</string>
    <string name="log_in">Log in</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile_update">Profile Update</string>
    <string name="profile_update_button">Save</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="error_email_length">Email must contain at least 7 characters!</string>
    <string name="error_email_sign">Email must contain "@"</string>
    <string name="error_password_length">Password must contain at least 8 characters!</string>
    <string name="error_password_different">Passwords must match!</string>
    <string name="error_name_length">Name must contain at least 4 characters!</string>
    <string name="error_empty">The field must not be empty</string>
    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_0">0</string>
    <string name="profile_greeting">Hello %1$s!</string>
    <string name="balance">Balance</string>
    <string name="value_of_balance">$15,378.32</string>
    <string name="button_buy">Buy</string>
    <string name="button_sell">Sell</string>
    <string name="button_scan">Scan</string>

</resources>