<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <TextView
        android:id="@+id/textViewSignInTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/have_account"
        android:fontFamily="@font/poppins"
        android:layout_marginEnd="3dp"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/textViewSignInTopClickable"
        app:layout_constraintEnd_toStartOf="@+id/textViewSignInTopClickable"
        app:layout_constraintTop_toTopOf="@+id/textViewSignInTopClickable">
    </TextView>

    <TextView
        android:id="@+id/textViewSignInTopClickable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:fontFamily="@font/poppins"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <TextView
        android:id="@+id/textViewSignInMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="125dp"
        android:fontFamily="@font/poppins"
        android:textStyle="bold"
        android:lineSpacingMultiplier="0.7"
        android:text="@string/sign_in_main"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <TextView
        android:id="@+id/textViewSignInEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/email_address"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignInMain">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSignInEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="15dp"
        app:boxBackgroundColor="@color/light_grey"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignInEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextSignInEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/hint_for_email"
            android:inputType="textEmailAddress"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textColorHint="@color/black"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textViewSignInPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/password"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSignInEmail">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSignInPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        app:layout_goneMarginStart="5dp"
        android:layout_marginEnd="15dp"
        app:boxBackgroundColor="@color/light_grey"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignInPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextSignInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/hint_for_password"
            android:inputType="textPassword"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textColorHint="@color/black"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonSignIn"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/poppins"
        android:text="@string/log_in_button"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSignInConfirmPassword">
    </com.google.android.material.button.MaterialButton>

    <TextView
        android:id="@+id/textViewSignInConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/confirm_password"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutSignInPassword">
    </TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSignInConfirmPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        app:layout_goneMarginStart="5dp"
        android:layout_marginEnd="15dp"
        app:boxBackgroundColor="@color/light_grey"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeWidth="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSignInConfirmPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextSignInConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/hint_for_confirm_password"
            android:inputType="textPassword"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:textColorHint="@color/black"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>