<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewMainFragmentGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:text="@string/profile_greeting"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewMainFragmentTextBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/balance"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/textViewMainFragmentGreeting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMainFragmentGreeting">

    </TextView>


    <TextView
        android:id="@+id/textViewMainFragmentBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/value_of_balance"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMainFragmentTextBalance">

    </TextView>

    <ImageView
        android:id="@+id/imageViewMainFragmentBTC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/img_btc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMainFragmentBalance">

    </ImageView>

    <ImageView
        android:id="@+id/imageViewMainFragmentETH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/img_eth"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewMainFragmentBTC"
        app:layout_constraintStart_toEndOf="@+id/imageViewMainFragmentBTC"
        app:layout_constraintTop_toTopOf="@+id/imageViewMainFragmentBTC">

    </ImageView>

    <Button
        android:id="@+id/buttonMainFragmentBuy"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins"
        android:text="@string/button_buy"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMainFragmentBTC">

    </Button>

    <Button
        android:id="@+id/buttonMainFragmentSell"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:backgroundTint="@color/grey"
        android:fontFamily="@font/poppins"
        android:text="@string/button_sell"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonMainFragmentBuy"
        app:layout_constraintStart_toEndOf="@+id/buttonMainFragmentBuy"
        app:layout_constraintTop_toTopOf="@+id/buttonMainFragmentBuy">

    </Button>


</androidx.constraintlayout.widget.ConstraintLayout>