<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OnBoardingActivity">

    <ImageView
        android:id="@+id/imageViewOnBoarding"
        android:layout_width="250dp"
        android:layout_height="350dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/img_on_boarding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </ImageView>

    <TextView
        android:id="@+id/textViewOnBoardingGreeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_boarding_greeting"
        android:lineSpacingMultiplier="0.7"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins_bold"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewOnBoarding">
    </TextView>

    <TextView
        android:id="@+id/textViewOnBoardingAdditional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_boarding_additional"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/grey"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewOnBoardingGreeting"
        app:layout_constraintStart_toStartOf="@+id/textViewOnBoardingGreeting"
        app:layout_constraintTop_toBottomOf="@+id/textViewOnBoardingGreeting">
    </TextView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/materialButtonOnBoarding"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_marginBottom="30dp"
        android:text="@string/on_boarding_button"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins"
        android:backgroundTint="@color/blue"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textViewOnBoardingAdditional"
        app:layout_constraintStart_toStartOf="@+id/textViewOnBoardingAdditional">
    </com.google.android.material.button.MaterialButton>

</androidx.constraintlayout.widget.ConstraintLayout>
